src/styles/application.scss
@import '~crds-styles/assets/stylesheets/bootstrap';

.pin-label{
  font-size: 12px;
  color: blue;
}

.pin-label.PERSON {

}

.pin-label.GATHERING {

}

.pin-label.SITE {
  color: orange;
}

.pin-label.PERSON.host {
  color: teal;
}

.pin-label.GATHERING.host {
  color: teal;
}

.pin-label.PERSON.me {
  color: gold;
}

.pin-label.GATHERING.me {
  color: gold;
}


.dark-theme {
  background: lighten($cr-gray-darker, .75);
}

app-preloader {
  display: none;
  .loading & {
    display: block;
  }
}

.outlet-wrapper {
  display: block;
  .loading & {
    display: none;
  }
}

app-neighbors {
  display: block;
  background: $cr-gray-lighter;
}

// Add me to map
app-add-me-to-map {
  background-color: darken($cr-blue, 20);
  color: $cr-white;
  display: block;
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 5;
}

.fauxdal {
  background-color: darken($cr-blue, 20);
  color: $cr-white;
  display: block;
  height: 100vh;
  width: 100vw;
  overflow: scroll;

  // Added so the "modal" sits on top of the header
  position: absolute;
  top: 0;
  left: 0;
  z-index: 7;

  .close {
    opacity: 1.0;

    position: absolute;
    top: 1rem;
    right: 1rem;

    a {
      color: $cr-white;

      display: block;
      padding: 1rem;
      margin: -1rem;

      &:hover {
        color: rgba($cr-white, .5);
      }
    }
  }

  .page-footer {
    display: flex;
    justify-content: center;
    align-items: center;

    &.page-footer-vertical {
      flex-direction: column;
    }
  }

  &.fauxdal-center {
    align-items: center;
    display: flex;
    justify-content: center;
    padding-top: 3rem;
  }

  &.fauxdal-fullscreen {
    @media (min-width: $screen-xs) {
      padding-top: initial;
    }

    .container-fluid {
      background-color: darken($cr-blue, 20);
      padding-top: 1rem;
      padding-bottom: 1rem;

      address-form {
        display: block;
        margin: 0 auto;
        padding-top: 1rem;
        width: 100%;
      }

      crds-content-block {
        display: block;
        margin: 0 auto;
        text-align: center;
      }

      @media (min-width: $screen-xs) {
        padding: 2rem;

        crds-content-block {
          width: 450px;
        }
        .alert crds-content-block {
          width: auto;
        }

        address-form {
          width: 400px;
        }
      }

      @media (min-width: $screen-sm) {
        crds-content-block {
          width: 475px;
        }
        .alert crds-content-block {
          width: auto;
        }

        address-form {
          width: 425px;
        }
      }

      @media (min-width: $screen-md) {
        crds-content-block {
          width: 500px;
        }
        .alert crds-content-block {
          width: auto;
        }
      }
    }
  }

  .title {
    color: $cr-white;
  }
}

.app-header {
  position: relative;
  z-index: 5;

  .brand-bar {
    position: relative;
    height: 40px;
    overflow: hidden;
    background-image: url('//crds-cms-uploads.s3.amazonaws.com/connect/brandbanner-bg.jpg');
    background-repeat: repeat-x;
    background-size: auto 100%;
  }

  .app-logo {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    padding: 11.5px;
    line-height: 1;
    color: $cr-white;
    background-image: url('//crds-cms-uploads.s3.amazonaws.com/connect/brandbanner-logo-bg.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    svg {
      width: 75px;
      height: 15px;
      padding: 0;
    }
  }

  .page-title {
    text-align: center;
    padding: 1rem;
    background-color: darken(desaturate($cr-blue-dark, 5), 5);

    * {
      color: $cr-white;
    }

    a {
      margin-top: 0.25rem;
    }

    h1 {
      display: inline-block;
      margin: 0 auto;
      line-height: 1;
      font-size: 1.5rem;
    }
  }
}

// Centers blocks to the middle of the screen.
.content-middle {
  @include container-fixed();
  max-width: $container-tablet;
  width: 100%;
}

// Map searchbar
app-search-bar {
  display: flex;
  position: relative;
  z-index: 5;
  justify-content: flex-start;
  padding: .5rem 1rem;
  background-color: darken(desaturate($cr-blue-dark, 5), 5);

  > div {
    display: flex;
    justify-content: flex-start;

    @media (min-width: $screen-sm) {
      margin: 0 auto;
      padding: 0 2rem;
      width: $container-tablet;
    }

    > button {
      margin-left: 6px;
    }
  }


  .input-group {
    display: inline-flex;
    width: calc(100% - 90px);
    margin-right: 1rem;

    .input-group-btn {
      width: initial;
    }

    @media (min-width: $screen-xs) {
      flex-grow: 0;
    }

    button.btn {
      padding-right: 10px;
      padding-left: 10px;
      width: 70px;

      @media (min-width: $screen-xs) {
        padding-right: 20px;
        padding-left: 20px;
      }
    }
  }

  input[placeholder] {
    text-overflow: ellipsis;
  }

  // Remove validation
  input.form-control.ng-touched {
    &.ng-valid,
    &.ng-invalid {
      border-color: $input-border;
      box-shadow: inset 0 0 0 1px $input-border;

      &:focus {
      border-color: $input-border-focus;
      box-shadow: inset 0 0 0 1px rgba($input-border-focus, 0.5);
      }
    }
  }
}

app-map,
sebm-google-map,
canvas-map-overlay {
  // Calculations are designed such that while the screen is less than 3000px
  // tall, the map is never too short, but also never more than 99px below
  // the bottom of the screen directly within Connect.
  //
  // When displayed as a microclient, it may fall another 54px-64px below
  // the footer, accounting for the global header.
  height: 381px;
  @for $idx from 5 to 30 {
    $height: $idx * 100;
    @media screen and ( min-height: #{$height}px ){
      height: #{$height - 19}px;
    }
  }
}

// Style map
app-map {
  display: block;
  overflow: hidden;
  position: relative;
}

sebm-google-map {
  @media (min-width: $screen-xs) {
    .gmnoprint {
      padding: .5rem;
    }
  }
}
/* ... */

